app/assets/stylesheets/bootstrap_and_overrides.css.scss
/*
  =require twitter-bootstrap-static/bootstrap

  Use Font Awesome icons (default)
  To use Glyphicons sprites instead of Font Awesome, replace with "require twitter-bootstrap-static/sprites"
  =require twitter-bootstrap-static/fontawesome
  */

  body { padding-top: 70px; }

  footer {
    background-color: #f5f5f5;
    text-align: center;
    margin-top: 70px;
    padding: 30px 0;
    ul {
      list-style-type: none;
    }
  }

